# model_x

./: .bazelrc  .clang-tidy  .gitignore  MODULE.bazel  README.md
src/: BUILD  BUILD.bazel  main.cc
src/components/: BUILD.bazel
src/components/tensorboard/: logger.cc  logger.h
src/components/tokenizers/: byte_pair.h  tokenizers.cc  tokenizers.h
src/py_modules/: BUILD.bazel  main.py  requirements.in  requirements_lock.txt
