load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

py_binary(
    name = "main_py",
    srcs = ["main.py"],
    main = "main.py",
		deps = ["@pypi//datasets:pkg"]
)

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt",
)
